[package]
name = "mist-split-utils"
version = "0.1.0"
authors = ["LtPeriwinkle <not.yet.periwinkle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.ron]
version = "0.6"

[dependencies.serde]
veresion = "1.0"
default-features = false
features = ["serde_derive"]
